@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.102 2004/01/08 11:39:58 jaco Exp $
+# $Id: CHANGELOG,v 1.103 2004/01/08 17:03:01 jaco Exp $
 
 * Wed, Jan 07, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -131,6 +131,7 @@
         as the CD kernel (Thanks mark <mark@tapinternet.com>)
       - Added --noclean option to not remove temporary files
       - Added uncompressed loop image support
+      - Added "normal" option to --resolution
     [mklivecd.spec]:
       - Updated URL: http://livecd.berlios.de
       - Synced with MDK contrib spec
